--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,36 @@
 plugins {
     id 'java-library'
+    id "io.qameta.allure" version "2.8.1"
 }
+
+group 'org.example'
+version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
+allure {
+    version = "2.15.0"
+    autoconfigure = true
+    configuration = "testImplementation"
+    aspectjVersion = '1.9.5'
 
+    useJUnit5 {
+        version = "2.15.0"
+    }
+}
 dependencies {
     testImplementation (
             "com.github.javafaker:javafaker:1.0.2",
             'com.codeborne:selenide:5.24.3',
+            'org.junit.jupiter:junit-jupiter-params:5.8.0',
+            'io.qameta.allure:allure-selenide:2.15.0',
             'org.junit.jupiter:junit-jupiter-api:5.8.0')
-    testRuntimeOnly ('org.junit.jupiter:junit-jupiter-engine:5.8.0',
-            'org.junit.jupiter:junit-jupiter-engine:5.8.0')
+    testRuntimeOnly ('org.junit.jupiter:junit-jupiter-engine:5.8.0')
+}
+
+configurations {
+    testCompile
 }
 
 test {
